--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,23 +8,13 @@ services:
     container_name: fastapi-app
     ports:
       - "5001:5001"
+    depends_on:
+      - loki
+    environment:
+      - LOKI_ENDPOINT=http://loki:3100/loki/api/v1/push
     networks:
       - loadtest-net
 
-  influxdb:
-    image: influxdb:2.7
-    container_name: influxdb
-    ports:
-      - "8086:8086"
-    volumes:
-      - influxdb_data:/var/lib/influxdb2
-    environment:
-      - DOCKER_INFLUXDB_INIT_MODE=setup
-      - DOCKER_INFLUXDB_INIT_USERNAME=admin
-      - DOCKER_INFLUXDB_INIT_PASSWORD=admin123
-      - DOCKER_INFLUXDB_INIT_ORG=my-org
-      - DOCKER_INFLUXDB_INIT_BUCKET=my-bucket
-      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=my-secret-token
   jmeter:
     build:
       context: ./jmeter
@@ -91,6 +81,11 @@ services:
       - "7100:9100"
     networks:
       - loadtest-net
+  loki:
+    image: grafana/loki:latest
+    container_name: loki
+    ports:
+      - "3100:3100"  
 
 networks:
   loadtest-net:
