--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,6 +100,8 @@ services:
     container_name: loki
     ports:
       - "3100:3100"  
+    networks:
+      - loadtest-net
 
 networks:
   loadtest-net:
